--- a/ProjectPortfolio/Views/About/Index.cshtml
+++ b/ProjectPortfolio/Views/About/Index.cshtml
@@ -58,31 +58,33 @@
 		<a href="https://www.dbs.ie/" target="_blank">Dublin Business School (a.k.a. DBS)</a> where I acheived 1st class honours in all 3rd level qualifications 
 		acheived!
     </p>
-    <h3>Interests</h3>
-    <p>
-        As you can see, my <strong>number one</strong> interest is Software Development. It's a true passion for sure, which is why a huge amount of 
-    	my time is spent coding on my Mac (a.k.a. Debs)! The following interests ebb and flow over time making their ranking (outside of 
-    	Software Development) difficult! That said, here are my interests in no particular order:
-    </p>
-    <ul id="interests">
-        <li>GAA</li>
-    	<li>Software Development</li>
-    	<li>Writing</li>
-    	<li>Blogging</li>
-    	<li>Cinema</li>
-    	<li>Social Media</li>
-        <li>Socialising</li>
-    	<li>Open Source</li>
-    	<li>Technology</li>
-    	<li>Arts</li>
-    	<li>TV</li>
-    	<li>Current Affairs</li>
-    	<li>Environment</li>
-    	<li>Sustainable Capitalism</li>
-    </ul>
-    <p>
-        As there is not enough hours in the day so when it comes to interests and hobbies, one has to prioritise! However, noteworthy is 
-		my passion for the above making quality experiences and insights an important of my journey as an enthusiast and a 
-		continious life long learner.
-    </p>
+	<div id="interests_section">
+        <h3>Interests</h3>
+        <p>
+            As you can see, my <strong>number one</strong> interest is Software Development. It's a true passion for sure, which is why a huge amount of 
+        	my time is spent coding on my Mac (a.k.a. Debs)! The following interests ebb and flow over time making their ranking (outside of 
+        	Software Development) difficult! That said, here are my interests in no particular order:
+        </p>
+        <ul id="interests">
+            <li>GAA</li>
+        	<li>Software Development</li>
+        	<li>Writing</li>
+        	<li>Blogging</li>
+        	<li>Cinema</li>
+        	<li>Social Media</li>
+            <li>Socialising</li>
+        	<li>Open Source</li>
+        	<li>Technology</li>
+        	<li>Arts</li>
+        	<li>TV</li>
+        	<li>Current Affairs</li>
+        	<li>Environment</li>
+        	<li>Sustainable Capitalism</li>
+        </ul>
+        <p>
+            As there is not enough hours in the day so when it comes to interests and hobbies, one has to prioritise! However, noteworthy is 
+    		my passion for the above making quality experiences and insights an important of my journey as an enthusiast and a 
+    		continious life long learner.
+        </p>
+	</div>
 </div>
