28th Commit - Started Developng IrishTechNews view

--- a/ProjectPortfolio/Views/About/Index.cshtml
+++ b/ProjectPortfolio/Views/About/Index.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div id="about_wrapper">
+<article id="about_wrapper">
     <h2>About John</h2>
     <p>
         This page is about my general background to date covering three careers. A more detailed review of my work history is available on
@@ -87,4 +87,4 @@
     		continious life long learner.
         </p>
 	</div>
-</div>
+</article>
