--- a/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
+++ b/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
@@ -3,5 +3,35 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Irish Tech News - Writing Portfolio</h2>
+<article id="itn_wrapper">
+    <h2>Irish Tech News - Writing/Blogging Portfolio</h2>
+    <p>
+		This page is dedicated to my love of writing for myself and for 
+		<a href="http://irishtechnews.ie/" target="_blank">Irish Tech News</a>, who I write for a part time basis.
+        My personal blogs are findable at my <a href="http://johnmlhll.blogspot.ie/" target="_blank">Blogspot</a> account and also 
+		on my <a href="https://www.linkedin.com/in/johnmlhll/" target="_blank">LinkedIn</a> profile. This page is based on my
+		professional publications via Irish Tech News and are as follows:
+    </p>
+	<!--Irish Tech News Section-->
+	<iframe width="560" height="315" src="http://irishtechnews.ie/" frameborder="0" allowfullscreen></iframe>
+	<hr class="hr_class">
+	<p><strong>Articles</strong></p>
+    <a class="btn_expand">Software Development Projects and Finding Your Feet | Click for More/Less</a>
+    <div class="portfolio_entry_detail">
+        <p>
+            Software Development Projects and Finding Your Feet
+            <span class="project_right">Publication Date: 3rd October 2017</span> 
+        </p>
+		<p>
+            This article is base upon my experience on the Higher Diploma in Science in Computing at Dublin Business School where
+			I acheived a 1st class honour after an extremely condensed course experience. It explores the transitioning to software
+			development and technology for those like me with other industry experience and skills, who are looking for a job in sofware
+			development. More more, you can click on the following link for 
+			<a href="http://irishtechnews.ie/software-development-projects-and-finding-your-feet/" target="_blank">
+				Software Development Projects and Finding Your Feet
+			</a>	
+		</p>
+	</div>
+    <hr class="hr_class">
+</article>
 
