29th Commit - Drafted ITN View Content

--- a/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
+++ b/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
@@ -7,31 +7,170 @@
     <h2>Irish Tech News - Writing/Blogging Portfolio</h2>
     <p>
 		This page is dedicated to my love of writing for myself and for 
-		<a href="http://irishtechnews.ie/" target="_blank">Irish Tech News</a>, who I write for a part time basis.
-        My personal blogs are findable at my <a href="http://johnmlhll.blogspot.ie/" target="_blank">Blogspot</a> account and also 
-		on my <a href="https://www.linkedin.com/in/johnmlhll/" target="_blank">LinkedIn</a> profile. This page is based on my
-		professional publications via Irish Tech News and are as follows:
+		<a href="http://irishtechnews.ie/" target="_blank">Irish Tech News</a>, 
+		whom I write for a part time basis. My personal blogs are at my 
+		<a href="http://johnmlhll.blogspot.ie/" target="_blank">Blogspot</a> 
+		account and also on my 
+		<a href="https://www.linkedin.com/in/johnmlhll/" target="_blank">LinkedIn</a> 
+		profile. This page is based on my professional publications via 
+		Irish Tech News and are as follows:
     </p>
 	<!--Irish Tech News Section-->
-	<iframe width="560" height="315" src="http://irishtechnews.ie/" frameborder="0" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="http://irishtechnews.ie/" frameborder="0" allowfullscreen=true></iframe>
 	<hr class="hr_class">
 	<p><strong>Articles</strong></p>
-    <a class="btn_expand">Software Development Projects and Finding Your Feet | Click for More/Less</a>
+	<!--Article Number 8 KSQL or Not KSQL...-->
+    <p>
+        KSQL or not KSQL? 
+        <span class="project_right">Publication Date: 24th October 2017</span> 
+    </p>
+    <a class="btn_expand">Click for More/Less</a>
     <div class="portfolio_entry_detail">
         <p>
-            Software Development Projects and Finding Your Feet
-            <span class="project_right">Publication Date: 3rd October 2017</span> 
+            This article reviews the Confluent presentation of the latest
+			version to Dublin's open source community of the big data messenger 
+			Apache Kafka. This open source platform is not an integrated 
+			streaming platform with its own streaming query language called 
+			KSQL. For more, you can click on the following link for 
+            <a href="http://irishtechnews.ie/ksql-or-not-ksql-apache-kafkas-latest-release-may-answer-the-question/" target="_blank">
+                KSQL or not KSQL? Apache Kafka''s latest release may answer the
+				question
+            </a>    
         </p>
+    </div>
+    <hr class="hr_class">
+	<!--Article Number 7 Software Development Projects...-->
+	<p>
+        Software Development Projects and Finding Your Feet
+        <span class="project_right">Publication Date: 3rd October 2017</span> 
+    </p>
+    <a class="btn_expand">Click for More/Less</a>
+    <div class="portfolio_entry_detail">
 		<p>
-            This article is base upon my experience on the Higher Diploma in Science in Computing at Dublin Business School where
-			I acheived a 1st class honour after an extremely condensed course experience. It explores the transitioning to software
-			development and technology for those like me with other industry experience and skills, who are looking for a job in sofware
-			development. More more, you can click on the following link for 
+            This article explores the transitioning to software development and 
+			technology for those like me with other industry experience and skills, 
+			who are looking for a job in sofware development. For more, you can click 
+			on the following link for 
 			<a href="http://irishtechnews.ie/software-development-projects-and-finding-your-feet/" target="_blank">
 				Software Development Projects and Finding Your Feet
 			</a>	
 		</p>
 	</div>
     <hr class="hr_class">
+    <!--Article Number 6 Transitioning to ICT...-->
+    <p>
+        Transitioning to ICT and Condensed Learning Programmes
+        <span class="project_right">Publication Date: 27th September 2017</span> 
+    </p>
+    <a class="btn_expand">Click for More/Less</a>
+    <div class="portfolio_entry_detail">
+        <p>
+            This article is base upon my experience on the Higher Diploma in 
+			Science in Computing at Dublin Business School where I acheived a 
+			1st class honour after an extremely condensed course experience. 
+			It explores the transitioning to ICT and the challenges an aspiring
+			ICT Professional like myself may face in the transition. For 
+			more, you can click on the following link for 
+            <a href="http://irishtechnews.ie/transitioning-to-ict-becoming-a-new-age-techie-through-condensed-learning-programmes/" target="_blank">
+                Transitioning to ICT - Becoming a new age Technie through 
+				condensed learning programmes?
+            </a>    
+        </p>
+    </div>
+    <hr class="hr_class">
+	<!--Article Number 5 Big Business and Organisational Agility...-->
+    <p>
+        Big Business and Organisational Agility
+        <span class="project_right">Publication Date: 3rd February 2017</span> 
+    </p>
+    <a class="btn_expand">Click for More/Less</a>
+    <div class="portfolio_entry_detail">
+        <p>
+            This article explores the need for big business to become
+			more flexible in how they do business from their organisational design
+			to company culture and onwards to daily business practices in order
+			to be sustainable as an enterprise. 
+			For more, you can click on the following link for 
+            <a href="http://irishtechnews.ie/why-big-business-needs-to-think-past-products-to-be-more-agile-in-the-marketplace/" target="_blank">
+                Why Big Business needs to think past products to be more agile
+				in the marketplace
+            </a>    
+        </p>
+    </div>
+    <hr class="hr_class">
+    <!--Article Number 4 Tech Startups and Company Culture...-->
+    <p>
+        Tech Startups and Company Culture
+        <span class="project_right">Publication Date: 31st December 2016</span> 
+    </p>
+    <a class="btn_expand">Click for More/Less</a>
+    <div class="portfolio_entry_detail">
+        <p>
+            This article explores the reasoning why tech startups should not
+			assume company culture is for the established company and start
+			considering the impact of their current business practices on their
+			existing organisation and its growth potential. 
+            For more, you can click on the following link for 
+            <a href="http://irishtechnews.ie/reinventing-the-wheel-why-tech-startups-need-to-consider-business-culture/" target="_blank">
+                Reinventing the wheel, why tech startups need to consider
+				company culture
+            </a>    
+        </p>
+    </div>
+    <hr class="hr_class">
+	<!--Article Number 3 The Future of Big Data...-->
+    <p>
+        The Future of Big Data 
+        <span class="project_right">Publication Date: 21st September 2016</span> 
+    </p>
+    <a class="btn_expand">Click for More/Less</a>
+    <div class="portfolio_entry_detail">
+        <p>
+            This article reviews a Hadoop User Group Ireland event, which explores 
+            the future of big data in terms of its general direction
+            and how Oracle B2B tech including Oracle's Big Data SQL offering.
+            For more, you can click on the following link for 
+            <a href="http://irishtechnews.ie/the-future-of-big-data-with-hadoop-user-group-hug-ireland-and-oracle/" target="_blank">
+                The Future of Big Data with Hadoop User Group Ireland and Oracle
+            </a>    
+        </p>
+    </div>
+    <hr class="hr_class">
+    <!--Article Number 2 Why Process Design Matters...-->
+    <p>
+	    Why Process Design Matters
+        <span class="project_right">Publication Date: 9th September 2016</span> 
+    </p>
+    <a class="btn_expand">Click for More/Less</a>
+    <div class="portfolio_entry_detail">
+        <p>
+            This article explores process design and management along with 
+            why customer input matters in a responsive approach to process 
+            management and business sustainability.
+            For more, you can click on the following link for 
+            <a href="http://irishtechnews.ie/process-design-and-management-why-customer-input-matters/" target="_blank">
+                Process Design and Management, why customer input matters
+            </a>    
+        </p>
+    </div>
+    <hr class="hr_class">
+     <!--Article Number 1 Companies can have longer lifespans...-->
+    <p>
+        Companies can have longer Lifespans by Developing Sustainable 
+        <span class="project_right">Publication Date: 15th August 2016</span> 
+    </p>
+    <a class="btn_expand">Click for More/Less</a>
+    <div class="portfolio_entry_detail">
+        <p>
+            This article explores the concept of sustainable capitalism and how
+			companies who play the long game through engagement with their people
+			actually are have longer company lifespans. 
+            For more, you can click on the following link for 
+            <a href="http://irishtechnews.ie/companies-can-have-longer-lifespans-by-developing-sustainable-policies-to-guide-good-corporate-practice/" target="_blank">
+                Companies can have longer lifespans by developing sustainable policies
+				to guide corporate practice
+            </a>    
+        </p>
+    </div>
 </article>
 
