--- a/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
+++ b/ProjectPortfolio/Views/IrishTechNews/Index.cshtml
@@ -20,10 +20,12 @@
 	<hr class="hr_class">
 	<p><strong>Articles</strong></p>
 	<!--Article Number 8 KSQL or Not KSQL...-->
-    <p>
-        KSQL or not KSQL? 
-        <span class="project_right">Publication Date: 24th October 2017</span> 
-    </p>
+    <div class="article_title">
+        <p>
+            KSQL or not KSQL? 
+            <span class="project_right">Publication Date: 24th October 2017</span> 
+        </p>
+	</div>
     <a class="btn_expand">Click for More/Less</a>
     <div class="portfolio_entry_detail">
         <p>
@@ -33,17 +35,19 @@
 			streaming platform with its own streaming query language called 
 			KSQL. For more, you can click on the following link for 
             <a href="http://irishtechnews.ie/ksql-or-not-ksql-apache-kafkas-latest-release-may-answer-the-question/" target="_blank">
-                KSQL or not KSQL? Apache Kafka''s latest release may answer the
+                KSQL or not KSQL? Apache Kafka's latest release may answer the
 				question
             </a>    
         </p>
     </div>
     <hr class="hr_class">
 	<!--Article Number 7 Software Development Projects...-->
-	<p>
-        Software Development Projects and Finding Your Feet
-        <span class="project_right">Publication Date: 3rd October 2017</span> 
-    </p>
+	<div class="article_title">
+    	<p>
+            Software Development Projects and Finding Your Feet
+            <span class="project_right">Publication Date: 3rd October 2017</span> 
+        </p>
+	</div>	
     <a class="btn_expand">Click for More/Less</a>
     <div class="portfolio_entry_detail">
 		<p>
@@ -58,10 +62,12 @@
 	</div>
     <hr class="hr_class">
     <!--Article Number 6 Transitioning to ICT...-->
-    <p>
-        Transitioning to ICT and Condensed Learning Programmes
-        <span class="project_right">Publication Date: 27th September 2017</span> 
-    </p>
+	<div class="article_title">
+        <p>
+            Transitioning to ICT and Condensed Learning Programmes
+            <span class="project_right">Publication Date: 27th September 2017</span> 
+        </p>
+	</div>
     <a class="btn_expand">Click for More/Less</a>
     <div class="portfolio_entry_detail">
         <p>
@@ -79,10 +85,12 @@
     </div>
     <hr class="hr_class">
 	<!--Article Number 5 Big Business and Organisational Agility...-->
-    <p>
-        Big Business and Organisational Agility
-        <span class="project_right">Publication Date: 3rd February 2017</span> 
-    </p>
+	<div class="article_title">
+        <p>
+            Big Business and Organisational Agility
+            <span class="project_right">Publication Date: 3rd February 2017</span> 
+        </p>
+	</div>
     <a class="btn_expand">Click for More/Less</a>
     <div class="portfolio_entry_detail">
         <p>
@@ -99,10 +107,12 @@
     </div>
     <hr class="hr_class">
     <!--Article Number 4 Tech Startups and Company Culture...-->
-    <p>
-        Tech Startups and Company Culture
-        <span class="project_right">Publication Date: 31st December 2016</span> 
-    </p>
+	<div class="article_title">
+        <p>
+            Tech Startups and Company Culture
+            <span class="project_right">Publication Date: 31st December 2016</span> 
+        </p>
+	</div>
     <a class="btn_expand">Click for More/Less</a>
     <div class="portfolio_entry_detail">
         <p>
@@ -119,10 +129,12 @@
     </div>
     <hr class="hr_class">
 	<!--Article Number 3 The Future of Big Data...-->
-    <p>
-        The Future of Big Data 
-        <span class="project_right">Publication Date: 21st September 2016</span> 
-    </p>
+    <div class="article_title">
+        <p>
+            The Future of Big Data 
+            <span class="project_right">Publication Date: 21st September 2016</span> 
+        </p>
+	</div>
     <a class="btn_expand">Click for More/Less</a>
     <div class="portfolio_entry_detail">
         <p>
@@ -137,10 +149,12 @@
     </div>
     <hr class="hr_class">
     <!--Article Number 2 Why Process Design Matters...-->
-    <p>
-	    Why Process Design Matters
-        <span class="project_right">Publication Date: 9th September 2016</span> 
-    </p>
+	<div class="article_title">
+        <p>
+    	    Why Process Design Matters
+            <span class="project_right">Publication Date: 9th September 2016</span> 
+        </p>
+	</div>	
     <a class="btn_expand">Click for More/Less</a>
     <div class="portfolio_entry_detail">
         <p>
@@ -155,10 +169,12 @@
     </div>
     <hr class="hr_class">
      <!--Article Number 1 Companies can have longer lifespans...-->
-    <p>
-        Companies can have longer Lifespans by Developing Sustainable 
-        <span class="project_right">Publication Date: 15th August 2016</span> 
-    </p>
+	<div class="article_title">
+        <p>
+            Companies can have longer Lifespans by Developing Sustainable 
+            <span class="project_right">Publication Date: 15th August 2016</span> 
+        </p>
+	</div>	
     <a class="btn_expand">Click for More/Less</a>
     <div class="portfolio_entry_detail">
         <p>
