--- a/ProjectPortfolio/Views/Contact/Index.cshtml
+++ b/ProjectPortfolio/Views/Contact/Index.cshtml
@@ -3,5 +3,46 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Contact John</h2>
+<article id="contact_wrapper">
+    <h2>Contact John</h2>
+    <p>
+	    Thank you for reaching out via my contact page. You can use the online form,
+	    my email or phone number below. Also, love to connect with you on Twitter,
+	    LinkedIn or Google. Reach out and invite or follow me today. I'll follow ya back!
+	</p>
+	<section id="map">
+		  <h3>Location</h3>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d76258.43304294294!2d-6.315767235815948!3d53.32399194018989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e80ea27ac2f%3A0xa00c7a9973171a0!2sDublin!5e0!3m2!1sen!2sie!4v1509892224738" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen=true></iframe>
+	</section>	
+	<section id="contact_social_media">
+        <h3>Social Media Profiles</h3>
+	    <div id="follow_icons">
+	        <ul>
+                <!--LinkedIn Connect-->
+                <li>
+    	        	<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+                    <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/johnmlhll" data-format="hover" data-related="false" data-text="John Mulhall"></script>
+                </li>	
+            	<!--Twitter Follow-->
+            	<li>	
+                   <a href="https://twitter.com/johnmlhll?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow</a><script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </li>
+                <!--Google+ Follow-->   
+                <li>
+    				<div class="g-follow" data-annotation="bubble" data-height="24" data-href="//plus.google.com/u/0/110979112820437641101" data-rel="author"></div>
+                </li>
+    		</ul>
+    	</div>
+    </section>	
+	<hr class="hr_class">
+    <section id="online_contact_form">
+        <h3>Online Contact Form</h3>
+		@using(Html.BeginForm("SubmitEntry","Contact",FormMethod.Post))
+		{
+            <div class="validation">@Html.ValidationSummary()</div> 
+		    
+		}
+	</section>
+</article>
+
 
