--- a/ProjectPortfolio/Views/Contact/Index.cshtml
+++ b/ProjectPortfolio/Views/Contact/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model ProjectPortfolio.Models.ContactModel
+
+@{
     ViewBag.Title = "Contact";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -12,7 +14,7 @@
 	</p>
 	<section id="map">
 		  <h3>Location</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d76258.43304294294!2d-6.315767235815948!3d53.32399194018989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e80ea27ac2f%3A0xa00c7a9973171a0!2sDublin!5e0!3m2!1sen!2sie!4v1509892224738" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen=true></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d76258.43304294294!2d-6.315767235815948!3d53.32399194018989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e80ea27ac2f%3A0xa00c7a9973171a0!2sDublin!5e0!3m2!1sen!2sie!4v1509892224738" width="750" height="315" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</section>	
 	<section id="contact_social_media">
         <h3>Social Media Profiles</h3>
@@ -35,14 +37,46 @@
     	</div>
     </section>	
 	<hr class="hr_class">
-    <section id="online_contact_form">
-        <h3>Online Contact Form</h3>
+    <div id="online_contact_form">
+		<h3>Online Contact Form</h3>
 		@using(Html.BeginForm("SubmitEntry","Contact",FormMethod.Post))
 		{
-            <div class="validation">@Html.ValidationSummary()</div> 
-		    
-		}
-	</section>
-</article>
+            <a class="validation">@Html.ValidationSummary()</a> 
 
+		    @Html.LabelFor(c => c.FirstName)
+		    <div class="inputbox">@Html.TextBoxFor(c => c.FirstName)</div>
+		
+		    @Html.LabelFor(c => c.LastName)
+		    <div class="inputbox">@Html.TextBoxFor(c => c.LastName)</div>
+		
+		    @Html.LabelFor(c => c.PhoneNumber)
+		    <div class="inputbox">@Html.TextBoxFor(c => c.PhoneNumber)</div>
+		
+		    @Html.LabelFor(c => c.Email)
+		    <div class="inputbox">@Html.TextBoxFor(c => c.Email)</div>
+		
+		    @Html.LabelFor(c => c.CompanyName)
+		    <div class="inputbox">@Html.TextBoxFor(c => c.CompanyName)</div>
+		
+		    @Html.LabelFor(c => c.City)
+		    <div class="inputbox">@Html.TextBoxFor(c => c.City)</div>
+		
+		    @Html.LabelFor(c => c.Country)
+		    <div class="inputbox">
+		        @Html.EnumDropDownListFor(c => c.Country, "Select Your Country", new { @class="form-control" })
+		    </div>
+		
+		    @Html.LabelFor(c => c.ContactReason)
+		    <div class="inputbox">
+		        @Html.EnumDropDownListFor(c => c.ContactReason, "Select Type of Contact", new { @class="form-control" })
+		    </div>
+		
+            @Html.LabelFor(c => c.Message)
+		    <div class="inputbox">
+                @Html.TextAreaFor(c => c.Message, new { @class="required", @cols="40", @rows="15" })
+		    </div>
+		    <input class="submit_button" type="submit" value="Submit" />
+		}
+	</div>
+</article>
 
