--- a/ProjectPortfolio/Content/Style.css
+++ b/ProjectPortfolio/Content/Style.css
@@ -295,7 +295,6 @@ footer hr {
 }
 
 /*Home Page - View Styling*/
-
 #home_view {
     width: 100%;
 }
@@ -498,11 +497,8 @@ footer hr {
 
 #contact_social_media {
     width: 55%;
+    margin: 1% 22% 2% 22%;
 }
-
-    #contact_social_media h3 {
-        padding: 4% 4% 0 0;        
-    }
 
     #contact_social_media ul li {
         list-style-type: none;
@@ -533,12 +529,49 @@ footer hr {
 #online_contact_form {
     width: 100%;
     resize: both;
+    text-align: center;
+    font-size: 1.5em;
+    padding: 2%;
 }
+
+.inputbox {
+    text-align: center;
+    margin: 0 20% 2% 20%;
+    font-size: 1em;
+    padding: 0;
+    width: 60%;
+    height: auto;
+}
+
+    .inputbox textarea {
+        margin: 1% 3% 2% 3%;
+        width: 100%;
+        height: 100%;
+        resize: both;
+        font-size: 1em;
+    }
 
 .validation {
     color: red;
     font-weight: bold;
 }
+
+.submit_button {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    width: 15%;
+    color: #f9fcfc;
+    background: #666699;
+    padding: 1% 0 1% 0;
+    border-radius: 25%;
+    font-size: 1em;
+}
+
+    .submit_button:hover {
+        font-weight: bold;
+        font-size: 100%;
+        background-color: #2eb82e;
+    }
 
 
 /* Restricted Styling - 800px max Screen*/
@@ -789,6 +822,37 @@ footer hr {
         border-style: none;
     }
 
+    .inputbox {
+        text-align: center;
+        margin: 0 8% 2% 8%;
+        font-size: 1em;
+        padding: 0;
+        width: 80%;
+        height: auto;
+    }
+
+        .inputbox textarea {
+            margin: 1% 3% 2% 3%;
+            width: 100%;
+            height: 100%;
+            resize: both;
+            font-size: 1em;
+            padding: 0.3%;
+        }
+
+    .submit_button {
+        width: 18%;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        font-weight: normal;
+        font-size: 0.9em;
+    }
+
+        .submit_button:hover {
+            font-weight: bold;
+            font-size: 100%;
+            background-color: #2eb82e;
+        }
 }
 
 /* Restricted Styling - 500px max Screen*/
@@ -1009,13 +1073,42 @@ footer hr {
     /*Responsive(<500) - Contact View Styling*/
     #contact_social_media {
         width: 100%;
+        margin: 2% 0 1% 0;
     }
 
     #follow_icons {
         width: 100%;
         display: inline-table;
-        padding: 1% 4% 4% 4%;
+        padding: 1% 0 4% 0;
         border-radius: 0;
     }
-                
+
+    .inputbox {
+        text-align: center;
+        font-size: 1em;
+        padding: 0;
+        width: 80%;
+        height: auto;
+    }
+
+        .inputbox textarea {
+            width: 100%;
+            font-weight: normal;
+            height: 100%;
+            resize: both;
+            font-size: 1em;
+        }
+
+    .submit_button {
+        width: 27%;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        font-weight: normal;
+        font-size: 0.9em;
+    }
+
+        .submit_button:hover {
+            font-weight: normal;
+            font-size: 100%;
+        }
 }
