--- a/ProjectPortfolio/Views/Home/Index.cshtml
+++ b/ProjectPortfolio/Views/Home/Index.cshtml
@@ -81,7 +81,7 @@
                     <img src="~/Images/imgLogoAzure.png" alt="Image of Microsoft Azure Logo"/>
                 </a>	
         		<p>Project Trailer:</p>  
-                <p>Production Pending</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/LNmyemO8M6c" frameborder="0" allowfullscreen></iframe>
         		<p>Project Description:</p>	
         		<p>
                     This project is build on an ASP.NET Core framework and is designed to showcase John's software portfolio from
@@ -93,7 +93,7 @@
         			links/details.
         		</p>
         		<p>Project Demonstration:</p>   
-    			<p>Production Pending</p>
+    			<iframe width="560" height="315" src="https://www.youtube.com/embed/qXU1SuT1Vl0" frameborder="0" allowfullscreen></iframe>
 				<div class="entry_urls">
 				    <p>Github Repository: <a href="https://github.com/johnmlhll/ProjectPortfolio" target="_blank">Project Portfolio</a></p>
 					<p>Live Site - Hyperlink: <a href="jmulhall.azurewebsites.net" target="_blank">Software Portfolio</a></p>
