--- a/ProjectPortfolio/Content/Style.css
+++ b/ProjectPortfolio/Content/Style.css
@@ -605,12 +605,15 @@ successful_contact_wrapper p {
 
 #continue_buttons {
     width: 100%;
+    display: block;
     resize: both;
     text-align: center;
-    margin: 7% auto;
-    display: inline-flex;
+    margin: 2% auto;
 }
 
+    #continue_buttons p {
+        text-align: center;     
+    }
 /* Restricted Styling - 800px max Screen */
 @media only screen and (max-width: 800px) {
     /*Responsive (<800px) - General Styling*/
@@ -719,6 +722,7 @@ successful_contact_wrapper p {
     /* Footer */
 
     /*Responsive (<800px) - Footer Styling*/
+
     footer {
         position: relative;
         width: 100%;
@@ -736,7 +740,7 @@ successful_contact_wrapper p {
         width: 80%;
         bottom: 65%;
     }
-       
+
     /*Responsive Styling (<800px) - Top of Footer*/
     #logo {
         align-content: center;
@@ -749,7 +753,7 @@ successful_contact_wrapper p {
         width: 100%;
     }
 
-         #footer_shares_linkedin li a img {
+        #footer_shares_linkedin li a img {
             display: none;
         }
 
@@ -769,7 +773,7 @@ successful_contact_wrapper p {
         }
 
             #footer_contact_details li a strong {
-                font-stretch:condensed;
+                font-stretch: condensed;
             }
 
             #footer_contact_details li a img {
@@ -1049,6 +1053,7 @@ successful_contact_wrapper p {
         margin: 0.5%;
         display: block;
     }
+
     /*Responsive(<500px) - Resume View Styling*/
     #language_slideshow {
         display: none;
